--- a/css/Gelfand_Site.css
+++ b/css/Gelfand_Site.css
@@ -27,6 +27,7 @@
     padding: 2px;
 
     background-color: #cecdc8;  /* color to blend header into image*/
+    transition: background-color 0.3s ease-in-out;
   }
 
   /* code for font size of logo home button */
@@ -114,7 +115,8 @@
   }
 
   .block1-content {
-    margin: 3em;
+    margin-left: 7em;
+    margin-top: 3em;
     width: 600px;
     height: 300px;
     font-size: 1.5em;
@@ -133,7 +135,7 @@
   {
     font-size: medium;
     word-spacing: 2px;
-    width: 400px;
+    width: 600px;
     margin-left: 6em;
   }
 
@@ -155,6 +157,12 @@
     background-color: white;
     border: 1px solid grey;
     margin: 30px;
+    opacity: 0;
+    transition: opacity 3s;
+  }
+
+  .box1:hover{
+    opacity: 1;
   }
 
   .box1-image
@@ -223,7 +231,7 @@
   .block3-content
   {
     margin: 3em;
-    margin-top: 6em;
+    margin-top: 5em;
     width: 600px;
     height: 300px;
     font-size: 1.5em;
@@ -234,7 +242,7 @@
   {
     font-size: medium;
     word-spacing: 2px;
-    width: 400px;
+    width: 600px;
     margin-left: 6em;
   }
   
@@ -244,9 +252,9 @@
   {
     float: right;
     margin: 30px 60px;
-    width: 500px;
-    height: 350px;
-    margin-right: 8.5em;
+    width: 600px;
+    height: 500px;
+    margin-right: 14em;
     margin-top: 4em;
   }
 
@@ -254,10 +262,10 @@
   {
     float: left;
     margin: 30px 60px;
-    width: 500px;
-    height: 350px;
+    width: 600px;
+    height: 500px;
     margin-top: 6em;
-    margin-left: 8.5em;
+    margin-left: 17em;
   }
 
   .button{
@@ -270,6 +278,8 @@
     display: inline-block;
     font-size: 16px;
     margin: 4px 2px;
+    margin-left: 6em;
+    margin-bottom: 2em;
     cursor: pointer;
     border-radius: 12px;
     opacity: 0.6;
@@ -305,7 +315,7 @@
   }
 
   .logoFooter{
-    margin: 20px 100px;
+    margin: 40px 270px;
   }
 
   /*footer basics*/
@@ -347,3 +357,51 @@
     transition: 0.1s ease-out;
     text-decoration: underline;
   }
+
+  .unorderd_list{
+    font-size: medium;
+    word-spacing: 2px;
+    width: 600px;
+    margin-left: 8em; 
+    margin-bottom: 3em;
+  }
+
+  /* Slideshow container */
+  .slideshow-container {
+    max-width: 1000px;
+    position: relative;
+    margin: auto;
+  }
+
+
+  /* On hover*/
+  .prev:hover, .next:hover {
+    background-color: rgba(0,0,0,0.8);
+  }
+
+  /* The dots */
+  .dot {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+  }
+
+  .active, .dot:hover {
+    background-color: #717171;
+  }
+
+  /* Fading animation */
+  .fade {
+    animation-name: fade;
+    animation-duration: 1.5s;
+  }
+
+  @keyframes fade {
+    from {opacity: .4} 
+    to {opacity: 1}
+  } 
