slight color change

--- a/css/Gelfand_Site.css
+++ b/css/Gelfand_Site.css
@@ -155,8 +155,8 @@
 
   .border{
     border-style: solid;
-    border-color:#b476d8;
-    border-width: 20px;
+    border-color:#cd9ee9;
+    border-width: 10px;
     margin-left: 16.5em;
     margin-right: 14.5em;
     margin-top: 4em;
