--- a/css/Gelfand_Site.css
+++ b/css/Gelfand_Site.css
@@ -25,9 +25,8 @@
   #headerBlock
   {
     padding: 2px;
-
-    background-color: #cecdc8;  /* color to blend header into image*/
     transition: background-color 0.3s ease-in-out;
+    background-color: #cecdc8;  /* color to blend header into image*/
   }
 
   /* code for font size of logo home button */
@@ -115,8 +114,8 @@
   }
 
   .block1-content {
-    margin-left: 7em;
     margin-top: 3em;
+    margin-left: 7em;
     width: 600px;
     height: 300px;
     font-size: 1.5em;
@@ -148,28 +147,15 @@
     align-items: center;
     margin: 20px 0px;
     flex-wrap: wrap;
-    opacity: 0;
-    transition: opacity 3s;
+    margin-top: 6em;
     /*background-color: #7a876b;*/
   }
-
-  .border{
-    border-style: solid none;
-    border-color:#cd9ee9;
-    border-width: 10px;
-    margin-top: 4em;
-  }
-
   .box1
   {
     width: 350px;
     background-color: white;
     border: 1px solid grey;
     margin: 30px;
-  }
-
-  .block2:hover{
-    opacity: 1;
   }
 
   .box1-image
@@ -238,7 +224,7 @@
   .block3-content
   {
     margin: 3em;
-    margin-top: 5em;
+    margin-top: 6em;
     width: 600px;
     height: 300px;
     font-size: 1.5em;
@@ -259,9 +245,9 @@
   {
     float: right;
     margin: 30px 60px;
-    width: 400px;
-    height: 500px;
-    margin-right: 14em;
+    width: 500px;
+    height: 350px;
+    margin-right: 8.5em;
     margin-top: 4em;
   }
 
@@ -269,10 +255,10 @@
   {
     float: left;
     margin: 30px 60px;
-    width: 400px;
-    height: 500px;
+    width: 500px;
+    height: 350px;
     margin-top: 6em;
-    margin-left: 17em;
+    margin-left: 8.5em;
   }
 
   .button{
@@ -285,8 +271,6 @@
     display: inline-block;
     font-size: 16px;
     margin: 4px 2px;
-    margin-left: 6em;
-    margin-bottom: 2em;
     cursor: pointer;
     border-radius: 12px;
     opacity: 0.6;
@@ -322,7 +306,7 @@
   }
 
   .logoFooter{
-    margin: 40px 130px;
+    margin: 20px 100px;
   }
 
   /*footer basics*/
@@ -375,9 +359,16 @@
 
   /* Slideshow container */
   .slideshow-container {
-    position: static;
+    max-width: 1000px;
+    position: relative;
+    margin: auto;
   }
 
+
+  /* On hover*/
+  .prev:hover, .next:hover {
+    background-color: rgba(0,0,0,0.8);
+  }
 
   /* The dots */
   .dot {
@@ -394,14 +385,3 @@
   .active, .dot:hover {
     background-color: #717171;
   }
-
-  /* Fading animation */
-  .fade {
-    animation-name: fade;
-    animation-duration: 5s;
-  }
-
-  @keyframes fade {
-    from {opacity: 0.4} 
-    to {opacity: 1}
-  } 
