--- a/css/Gelfand_Site.css
+++ b/css/Gelfand_Site.css
@@ -270,24 +270,28 @@
 
 /* block 3--------------------*/
 
-  .block3-content
-  {
-    margin: 3em;
-    margin-top: 6em;
-    width: 600px;
-    height: 300px;
-    font-size: 1.5em;
-    display: inline-block;
+  #block3 {
+    display: flex;
+    align-items: center;
   }
 
-  .block3-content p
-  {
-    font-size: medium;
-    word-spacing: 2px;
-    width: 400px;
-    margin-left: 6em;
+  .block3-content {
+    margin: 6em;
+    width: 600px;
+    font-size: 1.5em;
   }
   
+  .block3-content h2 {
+    font-size: larger;
+    word-spacing: 2px;
+  }
+  
+  .block3-content p {
+    font-size: large;
+    word-spacing: 2px;
+    line-height: 1.5;
+    width: 400px;
+  }
 
   
   .imageright
