block 3 margin top and bottom to space out more

--- a/css/Gelfand_Site.css
+++ b/css/Gelfand_Site.css
@@ -273,6 +273,8 @@
   #block3 {
     display: flex;
     align-items: center;
+    margin-top: 7em;
+    margin-bottom: 3em;
   }
 
   .block3-content {
