last min margin changes

--- a/css/Gelfand_Site.css
+++ b/css/Gelfand_Site.css
@@ -299,6 +299,7 @@
   {
     float: left;
     margin: 30px 60px;
+    margin-right: 140px;
     width: 500px;
     height: 350px;
     margin-top: 6em;
