--- a/css/Gelfand_Site.css
+++ b/css/Gelfand_Site.css
@@ -147,7 +147,7 @@
   body 
   {
     /* font style and color of entire body*/
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Merriweather Sans', sans-serif;
     background-color: #cecdc8;
   }
 
@@ -403,6 +403,8 @@
     margin-left: 8em; 
     margin-bottom: 3em;
   }
+
+  /*slideshow?*/
 
   .fade {
       animation-name: fade;
