--- a/css/contact.css
+++ b/css/contact.css
@@ -26,7 +26,7 @@
     {
         padding: 2px;
         transition: background-color 0.3s ease-in-out;
-        background-color: #cecdc8;  /* color to blend header into image*/
+        background-color: #ccbed4;  /* color to blend header into image*/
     }
 
     /* code for font size of logo home button */
@@ -90,7 +90,7 @@
     /*On mouse hover changes style of links*/
     .overlay a:hover, .overlay a:focus 
     {
-        color: #b476d8;
+        color: #335e7e;
     }
 
     /*Where the close button while be*/
@@ -108,13 +108,14 @@
     {
         /* font style and color of entire body*/
         font-family: 'Merriweather Sans', sans-serif;
-        background-color: #cecdc8;
+        background-color: #335e7e;
     }
     .the_title {
         text-align: center;
         letter-spacing: -.02em;
         font-size: 32px;
         line-height: 40px;
+        margin-top: 2em;
     }
     .the_title_text {
         max-width: 820px;
@@ -130,7 +131,7 @@
     .contact-us-box {
         width: 25%;
         height: 300px;
-        background-color: #ccbed4;
+        background-color: #b394b3;
         float: right;
         display: flex;
         flex-direction: column;
@@ -183,17 +184,25 @@
     }
 
     .contact-form button {
-        padding: 10px 15px;
-        font-size: 16px;
-        background-color: #b476d8;
-        color: #fff;
+        background-color: #cd9ee9;
+        color: #000;
         border: none;
+        padding: 5px 15px;
+        font-weight: 600;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 20px;
+        margin: 4px 2px;
         cursor: pointer;
-        margin-top: 10px;
+        border-radius: 12px;
+        opacity: 0.6;
+        transition: 0.3s;
     }
 
     .contact-form button:hover {
-        background-color: #8b34b3;
+        background-color: #cd9ee9;
+        color: white;
     }
 
     /* Adjust the styles as needed based on your design preferences */
@@ -257,7 +266,7 @@
   /*hover color footer*/
   .footer-info a:hover
   {
-    color: #b476d8;
+    color: #cd9ee9;
     transition: 0.1s ease-out;
     text-decoration: underline;
   }
