--- a/css/contact.css
+++ b/css/contact.css
@@ -138,13 +138,14 @@
         margin: 7em;
         margin-bottom: 7em;
         padding: 20px;
+        border-radius: 5px;
     }
     
     .contact-us-box p {
         font-size: medium;
         word-spacing: 2px;
         line-height: 1.5;
-        text-align: center;
+        text-align: left;
         margin: 10px 0; 
     }
     
