--- a/css/client.css
+++ b/css/client.css
@@ -156,13 +156,13 @@
     .quote::before {
         content: open-quote;
         font-size: 2em;
-        margin-right: 0.1em;
+        margin-right: 0;
     }
     
     .quote::after {
         content: close-quote;
         font-size: 2em;
-        margin-left: 0
+        margin-left: 0;
     }
     
 
